--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
   <!-- CSS only -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous" />
-  link
   <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
   <link rel="stylesheet" href="style.css" />
@@ -273,8 +272,6 @@
                 <p>downloads</p>
               </div>
             </div>
-
-
           </div>
         </div>
       </div>
@@ -710,7 +707,7 @@
                   assumenda optio
                   nam porro
                   distinctio</p>
-                <div class="row mt-5 mb-5">
+                <div class="row mt-5">
                   <div class="col-lg-4 w-25">
                     <img src="./images/comment1.jpg" class="rounded-circle img-fluid" alt="comment">
                   </div>
@@ -855,22 +852,20 @@
           </ul>
         </div>
       </div>
-      <div class="row">
-        <div class="col-lg-12 ">
-          <div class="card py-4 mt-5 px-3 bg-transparent border border-ligh border-1">
-            <div class="card-body d-lg-flex justify-content-evenly">
-              <div>
-                <h5 class="card-title fs-5 fw-bold  ">Subscribe To Our Newsletter</h5>
-                <p class="card-text fs-6">With supporting text below as a natural lead-in to additional content.</p>
-              </div>
-              <div class="d-flex">
-                <input type="text" class=" me-4 form-control" placeholder="Username" aria-label="Username"
-                  aria-describedby="basic-addon1">
-                <a href="#" class="col-lg-4 btn btn-primary">Subscribe</a>
-              </div>
-
+      <div class="card m-5 bg-transparent">
+        <div class="card-body  row p-4 ">
+          <div class="col-lg-7 my-3">
+            <h2 class="fs-5 fw-bolder">Subscribe To Our Newsletter</h2>
+            <p class="mb-0">With supporting text below as a natural lead-in to additional content.</p>
+          </div>
+          <div class="col-lg-5 align-items-center">
+            <div class="input-group my-4">
+              <input type="email" class="form-control border border-0" placeholder="Your Email Adress"
+                id="inputGroupFile04" aria-describedby="inputGroupFileAddon04" aria-label="Upload">
+              <button class="btn btn-primary" type="button" id="inputGroupFileAddon04">Subscribe</button>
             </div>
           </div>
+
         </div>
       </div>
     </div>
