--- a/index.html
+++ b/index.html
@@ -797,7 +797,7 @@
   <!-- footer -->
   <footer>
     <div class="container text-white">
-      <div class="row my-5">
+      <div class="row my-5 justify-content-center">
         <div class="col-lg-3">
           <img src="./images/white-logo.svg" class=" my-4 img-fluid" width="50%" alt="">
           <p class="text-white">making the world a better place through constructing elegant hierarchies.</p>
@@ -852,7 +852,7 @@
           </ul>
         </div>
       </div>
-      <div class="card m-5 bg-transparent">
+      <div class="card card-3 m-5 bg-transparent">
         <div class="card-body  row p-4 ">
           <div class="col-lg-7 my-3">
             <h2 class="fs-5 fw-bolder">Subscribe To Our Newsletter</h2>
